# uscis-pdf-ops-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
docs/: manual-uscis-validation.md  release-readiness.md
scripts/: inspector_smoke.sh  package_smoke.sh
src/uscis_pdf_ops/: __init__.py  cli.py
src/uscis_pdf_ops/core/: __init__.py  field_info.py  fill.py  fillability.py  normalize.py  overflow.py  text_fit.py  verify.py
src/uscis_pdf_ops/server/: __init__.py  app.py
tests/: conftest.py  test_cli.py  test_core.py
